<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bite of Sichuan</string>
    <string name="str_sr_usr_img">用户</string>
    <string name="str_sr_map_img">地图</string>
    <string name="str_sr_search_img">搜索</string>
    <string name="str_sr_account">登陆</string>
    <string name="str_sr_con_classfy">分类</string>
    <string name="str_sr_con_location">地点</string>
    <string name="str_sr_con_rank">排序</string>
    <string name="usr_img_main">用户</string>
    <string name="map_img_main">地图</string>
    <string name="search_main">搜</string>
    <string name="hinit_main">输入数据搜索</string>
    <string name="login_label_signin">登录</string>
    <string name="login_label_password">密码</string>
    <string name="user_name">用户名</string>
    <string name="register_label">注册</string>
    <string name="login_label_username">账号</string>
    <string name="phone">手机</string>
    <string name="check_password">确认密码</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_register_link">新用户注册</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register_label_phone">手机</string>
    <string name="login_label_checkpassword">确认密码</string>
    <string name="register_login">返回登录</string>
    <string name="collection">收藏</string>
    <string name="comment">评论</string>
    <string name="feature">特色</string>
    <string name="info">信息</string>
    <string name="info_simple">简介</string>
    <string name="costAvg">平均消费</string>
    <string name="gradeAvg">评分</string>
    <string name="adress">地址</string>
    <string name="shopName">商户名称</string>
	<string name="spinnerText">选择类型</string>
	<string name="ok">确定</string>
	<string name="cancle">取消</string>
	<string name="loadDraft">保存草稿</string>
	<string name="upShop">上传信息</string>
</resources>