<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:id="@+id/commentActivityNewpositionHorizontalScrollView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <GridView
                android:id="@+id/commentActivityNewpositionGridView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:fastScrollEnabled="true"
                android:focusable="true"
                android:gravity="center"
                android:horizontalSpacing="0dp"
                android:scrollbars="none"
                android:scrollingCache="false"
                android:stretchMode="spacingWidthUniform"
                android:verticalSpacing="1dp" >
            </GridView>
        </LinearLayout>
    </HorizontalScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_weight="0.5"
            android:src="@drawable/create_poi_item_activity_location" >
        </ImageView>

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/commentActivityNewposition_location"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:hint="输入地址..." >
        </EditText>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="名称："
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>

        <EditText
            android:id="@+id/commentActivityNewposition_name"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:hint="输入店名..."
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </EditText>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="等级："
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>

        <RatingBar
            android:id="@+id/commentActivityNewposition_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:isIndicator="false"
            android:minHeight="20dip"
            android:numStars="5" >
        </RatingBar>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="消费："
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>

        <EditText
            android:id="@+id/commentActivityNewpositionEditText_cost"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:hint="输入平均消费..."
            android:inputType="number" >
        </EditText>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="类型："
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>

        <Spinner
            android:id="@+id/commentActivityNewposition_spinner"
            style="android:spinnerStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:prompt="@string/spinnerText"
            android:spinnerMode="dialog" >
        </Spinner>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/commentActivityNewpositionEditText_feature"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="top"
        android:hint="输入特色..." >
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:background="@color/DodgerBlue" >

        <Button
            android:id="@+id/commentActivityNewpositionDraftsButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="@string/loadDraft" >
        </Button>

        <Button
            android:id="@+id/commentActivityNewpositionCreatButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/upShop" >
        </Button>
    </LinearLayout>

</LinearLayout>